--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,35 @@ body {
     font-family: 'Be Vietnam', sans-serif;
     margin: 0;
 }
+#banner {
+    background-image: url(https://melle1.github.io/blok_web2/images/para.png); 
+    height: calc(35vh);
+    min-height: 13rem;
+    background-size: cover;
+    background-position: center center;
+    padding: 5rem 5rem 0 5rem;
+    margin: 0; 
+    width: 100vw;
+    text-align: center;
+}
 h1 {
-    font-weight: 600; 
+    font-weight: 700;
+    color: white;
+    padding: 1em 1em;
+    background-color: rgba(0,0,0,.7);
+    margin-top: -0.5em;
 }
 h2 {
-    
+    text-align: center;
 }
 h3 {
     
 }
 p {
     color: #06183D;
+    font-size: 0.75em;
 }
-a {
+a { 
     color: #ffffff;
     text-decoration: none;
     font-weight: bold;
@@ -58,13 +74,36 @@ main {
       grid-column: span 4;
 }
 section {
-
+    padding: 1em;
+    background: white;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+section h2 {
+    grid-column: 1 / -1; 
 }
 article {
+    border: 1px solid lightgrey;
+    padding: 1rem;
+    margin: 1rem;
+    text-align: center;
     
 }
 article img {
-    width: 15rem;
+    width: 10rem;
+}
+button {
+color: #fff !important;
+text-transform: uppercase;
+text-decoration: none;
+background: #ed3330;
+padding: 1em;
+border-radius: 5px;
+display: inline-block;
+border: none;
+}
+button:hover {
+    color: blue;
 }
 footer {
     background-image: url(https://melle1.github.io/blok_web2/images/ams_ed_.png);
