--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 *, *::before, *::after {
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 body {
@@ -8,13 +8,13 @@ body {
 }
 
 #banner {
-    background-image: url(https://melle1.github.io/blok_web2/images/para.png); 
+    background-image: url(https://melle1.github.io/blok_web2/images/para.png);
     height: calc(35vh);
     min-height: 13rem;
     background-size: cover;
     background-position: center center;
     padding: 5rem 5rem 0 5rem;
-    margin: 0; 
+    margin: 0;
     width: 100vw;
     text-align: center;
 }
@@ -38,10 +38,10 @@ h3 {
 p {
     color: #06183D;
     font-size: 0.75em;
-    
+
 }
 
-a { 
+a {
     color: #ffffff;
     text-decoration: none;
     font-weight: bold;
@@ -64,11 +64,11 @@ header {
 }
 
 nav a {
-   color: white; 
+   color: white;
 }
 
 nav img {
-   width: 13.5rem; 
+   width: 13.5rem;
 }
 
 nav ul {
@@ -102,7 +102,7 @@ section {
 /* https://alligator.io/css/css-grid-layout-fr-unit/ */
 
 section h2 {
-    grid-column: 1 / -1; 
+    grid-column: 1 / -1;
 }
 
 article {
@@ -154,4 +154,7 @@ footer {
 recap css Sonja Rouwhorst
 recap html Sonja Rouwhorst
 recap demo Sonja Rouwhorst
+*/
+
+/* formulier
 */
