--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,13 @@ article {
 }
 
 article img {
-    width: 10rem;
+    width: 15rem;
+    transition: ease-in 0.2s;
+        box-shadow: #0000 1px 1px 1px 1px, rgba(0, 0, 0, 0.2) 1px 1px 5px 1px;
+}
+article img:hover {
+    transform: scale(1.1) rotate(-2deg); 
+    box-shadow: #0000 2px 2px 2px 2px, rgba(0, 0, 0, 0.2) 1px 1px 5px 1px;
 }
 
 button {
@@ -139,7 +145,13 @@ button:hover {
 }
 
 button:active {
-    transform: scale(0.9) rotate(720deg);
+    transform: scale(0.9) rotate(2deg);
+}
+
+#banner>button {
+    margin-top: -1.75rem;
+    background-color: transparent;
+    box-shadow: none;
 }
 
 footer {
