--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
     margin: 0;
     width: 100vw;
     text-align: center;
+    max-width: 100%;
 }
 
 h1 {
@@ -62,6 +63,8 @@ a img {
 header {
     background-color: #06183D;
     padding: 1em 1em;
+    width: 100vw;
+    max-width: 100%;
 }
 
 nav a {
@@ -194,6 +197,79 @@ form>fieldset{
     margin: 1.5em;
     flex-direction: row;
 }
+
+/* SEARCH */
+
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
+@import url(https://raw.github.com/FortAwesome/Font-Awesome/master/docs/assets/css/font-awesome.min.css);
+
+
+#wrap {
+    margin: 50px 100px;
+    display: inline-block;
+    position: relative;
+    float: right;
+    height: 60px;
+    padding: 0;
+    position: relative;
+    background: lightgrey;
+}
+
+input[type="text"] {
+  height: 60px;
+  font-size: 55px;
+  display: inline-block;
+  font-weight: 100;
+  border: none;
+  outline: none;
+  color: #555;
+  padding: 3px;
+  padding-right: 60px;
+  width: 0px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: none;
+  z-index: 3;
+  transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+  cursor: pointer;
+}
+
+input[type="text"]:focus:hover {
+  border-bottom: 1px solid #BBB;
+}
+
+input[type="text"]:focus {
+  width: 400px;
+  z-index: 1;
+  border-bottom: 1px solid #BBB;
+  cursor: text;
+}
+input[type="submit"] {
+      height: 67px;
+      width: 63px;
+      display: inline-block;
+      color:red;
+      float: right;
+      background: url(https://melle1.github.io/blok_web2/images/search.svg);
+    background-size: cover;
+      text-indent: -10000px;
+      border: none;
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 2;
+      cursor: pointer;
+      opacity: 0.4;
+      cursor: pointer;
+      transition: opacity .4s ease;
+}
+
+input[type="submit"]:hover {
+  opacity: 0.8;
+}
+
+/* BRON: https://codepen.io/CBeghin/pen/HeuiF?editors=1100 */
 
 
 
