--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 #banner {
-    background-image: url(https://melle1.github.io/blok_web2/images/para.png);
+    background-image: url(https://melle1.github.io/blok_web2/images/para.jpg);
     height: calc(35vh);
     min-height: 13rem;
     background-size: cover;
@@ -205,16 +205,19 @@ form>fieldset{
 
 
 #wrap {
-    margin: 50px 100px;
+
     display: inline-block;
     position: relative;
-    float: right;
-    height: 60px;
+    height: 40px;
     padding: 0;
+    top: -1.5em;
     position: relative;
-    background: lightgrey;
-}
 
+}
+#wrap form {
+	background: transparent;
+    box-shadow: none;
+}
 input[type="text"] {
   height: 60px;
   font-size: 55px;
@@ -222,16 +225,15 @@ input[type="text"] {
   font-weight: 100;
   border: none;
   outline: none;
-  color: #555;
+  color: black;
   padding: 3px;
-  padding-right: 60px;
+	padding-right: 60px;
   width: 0px;
   position: absolute;
   top: 0;
   right: 0;
   background: none;
   z-index: 3;
-  transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
   cursor: pointer;
 }
 
@@ -240,17 +242,19 @@ input[type="text"]:focus:hover {
 }
 
 input[type="text"]:focus {
-  width: 400px;
-  z-index: 1;
-  border-bottom: 1px solid #BBB;
-  cursor: text;
+    z-index: 1;
+    border-bottom: 1px solid #BBB;
+    cursor: text;
+    left: -15.5vw;
+    margin-bottom: 2em;
+	padding: 3px;
+	animation: slideout 0.2s ease-in forwards; 
 }
 input[type="submit"] {
-      height: 67px;
-      width: 63px;
+      height: 50px;
+      width: 50px;
       display: inline-block;
       color:red;
-      float: right;
       background: url(https://melle1.github.io/blok_web2/images/search.svg);
     background-size: cover;
       text-indent: -10000px;
@@ -260,7 +264,7 @@ input[type="submit"] {
       right: 0;
       z-index: 2;
       cursor: pointer;
-      opacity: 0.4;
+      opacity: 1;
       cursor: pointer;
       transition: opacity .4s ease;
 }
@@ -269,8 +273,27 @@ input[type="submit"]:hover {
   opacity: 0.8;
 }
 
+.wrap input[type="text"]:focus .wrap{
+    background: red;
+}
+
 /* BRON: https://codepen.io/CBeghin/pen/HeuiF?editors=1100 */
 
+@keyframes slideout {
+	0% {
+		width: 0;
+		top: 0;
+		background: transparent;
+	}
+	90% {
+		background: transparent;
+	}
+	100% {
+		width: 5.25em;
+		top: 1.4em;
+		background: white;
+	}
+}
 
 
 /* algehele bronnen:
