--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
     padding: 5rem 5rem 0 5rem;
     margin: 0;
     width: 100vw;
+	height: 20em;
     text-align: center;
     max-width: 100%;
 }
@@ -23,14 +24,16 @@ body {
 h1 {
     font-weight: 700;
     color: white;
-    padding: 1em 1em;
+    padding: 1em 1em 1em 1em;
     background-color: rgba(0,0,0,.7);
     margin-top: -0.5em;
+	white-space: nowrap;
 }
 
 h2 {
     text-align: center;
-    font-family: Arial, sans-serif;
+    font-family: 'Be Vietnam', sans-serif;
+	font-size: 2em;
 }
 
 h3 {
@@ -41,6 +44,7 @@ p {
     color: #06183D;
     font-size: 0.75em;
     text-align: left;
+	margin-bottom: 4em;
 }
 
 a {
@@ -58,6 +62,26 @@ a img {
     margin-bottom: 1em;
     width: 17.5em;
     background-color: none;
+}
+
+/* --------- HEADER --------- */
+
+.logo {
+	left: 0;
+}
+
+.logo-animate {
+	position: relative;
+	animation: slide-right 5s cubic-bezier(.89,.01,1,.05);
+}
+
+@keyframes slide-right {
+	0% {
+		left: 0;
+	}
+	100% {
+		left: 375vw;
+	}
 }
 
 header {
@@ -92,8 +116,46 @@ nav #account {
     justify-content: flex-end;
 }
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
+#all:checked ~ article {
+	display: block;
+}
 
-main {
+#short:checked ~ article:not(.short),
+#middle:checked ~ article:not(.middle),
+#long:checked ~ article:not(.long) {
+	display: none;
+} 
+/* checkt of id short gecheckt is, tilde kijkt naar volende artikel, broer of zus, selecteerd alle articles niet "not short" zijn door ze weg te halen */
+
+
+
+input[type="radio"] {
+	position: absolute;
+	display: none;
+}
+
+/* bron: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/radio
+*/
+
+.filter {
+	width: 100%;
+	grid-column: span 2;
+	display: flex;
+	justify-content: space-around;
+}
+/* grid column kijkt naar de kolommen en kijkt naar 2 ipv 1 */
+
+.filter label {
+	cursor: pointer;
+	margin: 2em;
+}
+
+.filter label:hover {
+	color: green;
+	font-weight: bold;
+}
+
+main { 
       grid-column: span 4;
 }
 
@@ -114,32 +176,54 @@ article {
     padding: 1rem;
     margin: 1rem;
     text-align: center;
+	position: relative;
+	background-color: ghostwhite;
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 article img {
-    width: 15rem;
+    width: 100%;
     transition: ease-in 0.2s;
-        box-shadow: #0000 1px 1px 1px 1px, rgba(0, 0, 0, 0.2) 1px 1px 5px 1px;
+    box-shadow: #0000 1px 1px 1px 1px, rgba(0, 0, 0, 0.2) 1px 1px 5px 1px;
+	margin-bottom: 1.5em;
+	
 }
 article img:hover {
     transform: scale(1.1) rotate(-2deg); 
     box-shadow: #0000 2px 2px 2px 2px, rgba(0, 0, 0, 0.2) 1px 1px 5px 1px;
 }
 
-button {
+.tags {
+	color: green;
+	border: 1px solid green;
+	border-radius: 0.25em;
+	padding: 0.5em;
+	transition: ease-in 0.1s;
+}
+
+.tags:hover {
+	background-color: green;
+	color: white
+}
+
+.read_more {
     color: #000 !important;
     text-transform: uppercase;
     text-decoration: none;
     background: #fbdd0f;
     padding: 1em;
-    border-radius: 5px;
+    border-radius: 0.3125em;
     display: inline-block;
     border: none;
     box-shadow: #d2b82b 0px 2px 0px 0px, rgba(0, 0, 0, 0.2) 0px 3px 2px 0px;
     transition: ease-in 0.2s;
+	bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
 }
 
-button:hover {
+.read_more:hover {
     cursor: pointer;
     transform: scale(1.05);
     background-color: #ffea6a;
@@ -147,14 +231,8 @@ button:hover {
     font-weight: bold;
 }
 
-button:active {
+.read_more:active {
     transform: scale(0.9) rotate(2deg);
-}
-
-#banner>button {
-    margin-top: -1.75rem;
-    background-color: transparent;
-    box-shadow: none;
 }
 
 footer {
@@ -178,14 +256,16 @@ footer {
   background-color: #d4f1f5;
 }
 
-form {
-    display: block;
+.register_field {
+    display: flex;
+	flex-direction: column;
     margin: auto;
     width: 100%;
     border-radius: 0.5em;
     padding: 1em 0;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 5px 0px;
     background-color: white;
+	border: none;
 }
 
 legend {
@@ -193,42 +273,124 @@ legend {
     font-size: 1.5rem;
 }
 
-form>fieldset{
+.contact_info, .account_info {
+	display: flex;
     margin: 1.5em;
-    flex-direction: row;
+    flex-direction: column;
+	min-width: 20em;
+	max-width: 25em;
+	margin-left: 10vw;
 }
 
-/* SEARCH */
+.contact_info label, .account_info label {
+	display: flex;
+	justify-content: space-between;
+	margin: 0.5em 0;
+	flex-direction: column;
+}
+
+.contact_info label input[type="text"]:valid, 
+.contact_info label input[type="tel"]:valid, 
+.contact_info label input[type="email"]:valid, 
+.contact_info label input[type="date"]:valid, 
+.account_info label input[type="text"]:valid, 
+.account_info label input[type="tel"]:valid, 
+.account_info label input[type="email"]:valid, 
+.account_info label input[type="date"]:valid, 
+.account_info label input[type="password"]:valid {
+	border: 2px green solid;
+}
+
+fieldset {
+	border: none;
+}
+
+ input[type="date"]:before {
+    content: attr(placeholder) !important;
+    color: #757575;
+	font-family: 'Be Vietnam', sans-serif;
+	width: 100%
+  }
+
+/* https://stackoverflow.com/questions/18146350/how-do-i-simulate-placeholder-functionality-on-input-date-field/34146024 */
+
+  input[type="date"]:focus:before,
+  input[type="date"]:valid:before {
+    content: attr(value)!important;
+	width: initial;
+	font-size: 1em;
+  }
+
+.account_info label input[type="password"]:invalid:focus + .requirements, 
+.account_info label input[type="email"]:invalid:focus + .requirements, 
+.contact_info label input[type="tel"]:invalid:focus + .requirements {
+	opacity: 1;
+}
+
+/* https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/password */
+
+.requirements {
+	opacity: 0;
+	position: relative;
+	color: red;
+}
+
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/Adjacent_sibling_combinator */
+
+.register_field input[type="submit"] {
+    color: #000 !important;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: #fbdd0f;
+    padding: 1em;
+    border-radius: 0.3125em;
+    display: inline-block;
+    border: none;
+    box-shadow: #d2b82b 0px 2px 0px 0px, rgba(0, 0, 0, 0.2) 0px 3px 2px 0px;
+    transition: ease-in 0.2s;
+}
+
+.register_field input[type="submit"]:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+    background-color: #ffea6a;
+    box-shadow: 0.5px 0.5px 2.5px 0px rgba(0,0,0,0.45);
+    font-weight: bold;
+}
+
+.register_field input[type="submit"]:active {
+    transform: scale(0.9) rotate(2deg);
+}
+
+/* --------- SEARCH --------- */
 
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
 @import url(https://raw.github.com/FortAwesome/Font-Awesome/master/docs/assets/css/font-awesome.min.css);
 
 
 #wrap {
-
     display: inline-block;
     position: relative;
-    height: 40px;
+    height: 4em;
     padding: 0;
-    top: -1.5em;
-    position: relative;
-
 }
-#wrap form {
+
+#banner form {
 	background: transparent;
     box-shadow: none;
 }
-input[type="text"] {
-  height: 60px;
-  font-size: 55px;
+
+#banner input[type="text"] {
+  height: 1.75em;
+  font-size: 3em;
   display: inline-block;
   font-weight: 100;
   border: none;
   outline: none;
   color: black;
-  padding: 3px;
-	padding-right: 60px;
-  width: 0px;
+  padding: 0.25em;
+  padding-right: 2.75em;
+  width: 0;
   position: absolute;
   top: 0;
   right: 0;
@@ -237,39 +399,45 @@ input[type="text"] {
   cursor: pointer;
 }
 
-input[type="text"]:focus:hover {
+#banner input[type="text"]:focus:hover {
   border-bottom: 1px solid #BBB;
 }
 
-input[type="text"]:focus {
+#banner input[type="text"]:focus {
+	font-family: 'Be Vietnam', sans-serif;
     z-index: 1;
     border-bottom: 1px solid #BBB;
     cursor: text;
-    left: -15.5vw;
-    margin-bottom: 2em;
-	padding: 3px;
-	animation: slideout 0.2s ease-in forwards; 
-}
-input[type="submit"] {
-      height: 50px;
-      width: 50px;
-      display: inline-block;
-      color:red;
-      background: url(https://melle1.github.io/blok_web2/images/search.svg);
-    background-size: cover;
-      text-indent: -10000px;
-      border: none;
-      position: absolute;
-      top: 0;
-      right: 0;
-      z-index: 2;
-      cursor: pointer;
-      opacity: 1;
-      cursor: pointer;
-      transition: opacity .4s ease;
+	padding: 0.25em;
+	animation: slideout 0.2s ease-in forwards;
 }
 
-input[type="submit"]:hover {
+#banner input[type="submit"] {
+	height: 6em;
+	width: 6em;
+	display: inline-block;
+	color:red;
+	background: url(https://melle1.github.io/blok_web2/images/search.svg);
+	background-size: cover;
+	text-indent: -10000px;
+	border: none;
+	position: absolute;
+	top: -1em;
+	right: 0;
+	z-index: 2;
+	cursor: pointer;
+	opacity: 1;
+	cursor: pointer;
+	transition: opacity .4s ease;
+	}
+
+.search_icon {
+	width: 3.125rem;
+	height: 3.125rem;
+}
+/* hiermee selecteer ik alleen de input in de wrap */
+
+#banner input[type="submit"]:hover {
   opacity: 0.8;
 }
 
@@ -289,16 +457,217 @@ input[type="submit"]:hover {
 		background: transparent;
 	}
 	100% {
-		width: 5.25em;
-		top: 1.4em;
+		display: block;
+		position: absolute;
+		left: -270%;
+		margin: auto;
+		width: 6.75em;
+		top: 2em;
+		background: white;
+
+	}
+}
+
+.detail {
+	font-size: 5vw;
+	margin-top: 0;
+	letter-spacing: 0.3em;
+	color: red;
+	background-image: url(https://melle1.github.io/blok_web2/images/para.jpg);
+	background-size: cover; 
+	background-position: center center; 
+	height: 30vh;
+}
+
+.detail:after {
+	content: "#57 - PARANOIA";
+	position: absolute; left: 1em;
+	color: white;  
+	letter-spacing: 0.31em;
+	opacity: 0.9;
+	font-size: 5.1vw;
+}
+
+#left
+{
+	float: left;
+	width: 45vw;
+	padding-left: 2em;
+}
+
+
+
+#right
+{
+	float: right;
+	width: 45vw;
+	padding-right: 2em;
+}
+
+/* tekstopmaak dp ^^ */
+
+@media only screen and (min-width: 976px) {
+	
+	section {
+    	display: grid;
+   		grid-template-columns: 1fr 1fr 1fr;
+	}
+	
+	.filter {
+	width: 100%;
+	grid-column: span 3;
+	display: flex;
+	justify-content: space-around;
+	}
+	
+	.register_field {
+	display: flex;
+    flex-direction: row;
+	}
+	
+}
+@media only screen and (max-width: 786px) {
+	h1 {
+	font-size: 1.4em;
+}
+	#banner input[type="submit"] {
+		top: 0;
+	}
+		#banner input[type="text"]:focus {
+		z-index: 1;
+		border-bottom: 1px solid #BBB;
+		cursor: text;
+		left: -205%;
+		padding: 0.35em;
+		animation: slideout 0.2s ease-in forwards; 
+		margin-top: 0.75em;
+		font-size: 3em;
+	}
+	@keyframes slideout {
+	0% {
+		width: 0;
+		top: 0;
+		background: transparent;
+	}
+	90% {
+		background: transparent;
+	}
+	100% {
+		display: block;
+		position: absolute;
+		left: -270%;
+		margin: auto;
+		width: 6.75em;
+		top: 3em;
 		background: white;
 	}
 }
+	
+}
+	
+@media only screen and (max-width: 600px) {
+	
+	section {
+    	display: grid;
+    	grid-template-columns: 1fr;
+	}
+	
+	h1 {
+		font-size: 1.5em;
+	}
+	
+	#banner input[type="submit"] {
+		width: 5em;
+		height: 5em;
+	}
+	#banner input[type="text"]:focus {
+		font-family: 'Be Vietnam', sans-serif;
+		z-index: 1;
+		border-bottom: 1px solid #BBB;
+		cursor: text;
+		padding: 0.25em;
+		animation: slideout 0.2s ease-in forwards;
+}
+	
+	.filter {
+		width: 100%;
+		grid-column: span 1;
+		display: flex;
+		justify-content: space-around;
+	}
+	
+	.filter label {
+		cursor: pointer;
+		margin: 1em;
+	}
+	
+	h1 {
+		font-weight: 700;
+		color: white;
+		padding: 2em;
+		background-color: rgba(0,0,0,.7);
+		margin-top: -0.5em;
+	}
+
+	#banner {
+		width: 100vw;
+		padding: 0;
+		height: 30vh;
+	}
+	
+	@keyframes slideout {
+	0% {
+		width: 0;
+		top: 0;
+		background: transparent;
+	}
+	90% {
+		background: transparent;
+	}
+	100% {
+		display: block;
+		position: absolute;
+		left: -270%;
+		margin: auto;
+		width: 6.75em;
+		top: 1.5em;
+		background: white;
+	}
+}
+}
+	@media only screen and (max-width: 500px) {
+		h1 {
+			font-size: 1.3em;
+		}
+			@keyframes slideout {
+	0% {
+		width: 0;
+		top: 0;
+		background: transparent;
+	}
+	90% {
+		background: transparent;
+	}
+	100% {
+		display: block;
+		position: absolute;
+		left: -270%;
+		margin: auto;
+		width: 6.75em;
+		top: 2em;
+		background: white;
+	}
+	}
+}
+
 
 
 /* algehele bronnen:
 recap css Sonja Rouwhorst
 recap html Sonja Rouwhorst
 recap demo Sonja Rouwhorst
+https://css-tricks.com/form-validation-ux-html-css/
+https://stackoverflow.com/questions/1776915/how-to-center-absolutely-positioned-element-in-div
 */
+
 
