Changed cursor img

--- a/css/style.css
+++ b/css/style.css
@@ -671,3 +671,9 @@ https://stackoverflow.com/questions/1776915/how-to-center-absolutely-positioned-
 */
 
 
+html {
+   cursor: url('https://melle1.github.io/blok_web2/images/laserpointer.png'), auto;	
+}
+
+
+
