--- a/css/style.css
+++ b/css/style.css
@@ -672,7 +672,7 @@ https://css-tricks.com/form-validation-ux-html-css/
 https://stackoverflow.com/questions/1776915/how-to-center-absolutely-positioned-element-in-div
 */
 
-.registreren {	cursor:url('https://melle1.github.io/blok_web2/images/laserpointer.png')
+.registreren {	cursor:url('https://melle1.github.io/blok_web2/images/laserpointer1.png'), auto
 }
 
 
