--- a/css/style.css
+++ b/css/style.css
@@ -463,24 +463,32 @@ fieldset {
 /* --------- TEKSTOPMAAK DP --------- */
 
 .detail {
-	font-size: 5vw;
-	margin-top: 0;
-	letter-spacing: 0.3em;
-	color: red;
+	margin-top: 1em;
 	background-image: url(https://melle1.github.io/blok_web2/images/para.jpg);
 	background-size: cover; 
 	background-position: center center; 
 	height: 30vh;
 }
 
-.detail:after {
-	content: "#57 - PARANOIA";
-	position: absolute; left: 1em;
-	color: white;  
-	letter-spacing: 0.31em;
-	opacity: 0.9;
-	font-size: 5.1vw;
+.detail h1 {
+		font-size: 5vw;
+		text-shadow:  1px 1px blue,
+		2px 2px green,
+		3px 3px black,
+		2px 2px white,
+		-2px -2px black,
+		-3px -3px white,
+		-4px -4px orange,
+		-5px -5px black;
+		letter-spacing: 0.3em;
+		color: red;
+		transition: ease-in 2s;
 }
+
+.detail h1:hover {
+	transform: scale(0.1) rotate(360deg);
+}
+
 #left
 {
 	float: left;
